[gd_scene load_steps=8 format=3]

[ext_resource type="Texture2D" uid="uid://duy30wr6boyk7" path="res://Art/BackPack/AllItems/empty.png" id="1"]
[ext_resource type="Script" path="res://Script/BackPack/wq.gd" id="2"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[node name="wq" type="Button"]
size_flags_vertical = 4
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
icon = ExtResource( "1" )
script = ExtResource( "2" )

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited" flags=18]
[connection signal="pressed" from="." to="." method="_on_pressed" flags=18]
